--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>{{message}}</h1>
     <div> {{error}}</div>
 
+    {{ countdown }}
+
     <form name="searchUser" ng-submit="search(username)">
       <input type="search" placeholder="Username to find" ng-model="username" required>
       <input type="submit" value="Search">
