--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
       <input type="submit" value="Search">
     </form>
 
-    <div ng-show="user">
+    <div ng-show="user" id="userDetails">
+      <h2>{{user.name}}</h2>
+      <img ng-src="{{user.avatar_url}}" width="200" title"{{user.name}}">
       <p>Sort By:
       <select ng-model="repoSortOrder">
         <option value="+name">Name</option>
         <option value="-stargazers_count">Stars</option>
         <option value="+language">Language</option>
       </select></p>
-
-      <h2>{{user.name}}</h2>
-      <img ng-src="{{user.avatar_url}}" width="200" title"{{user.name}}">
     </div>
 
     <table ng-hide="!user">
