added github.js file and modified script.js to create custom service for http requests and response data

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="script.js"></script>
+    <script src="github.js"></script>
   </head>
 
   <!--view-->
