--- a/index.html
+++ b/index.html
@@ -3,50 +3,16 @@
 
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
+    <script src="app.js"></script>
+    <script src="MainController.js"></script>
+    <script src="UserController.js"></script>
     <script src="github.js"></script>
   </head>
 
-  <!--view-->
-  <body ng-controller="MainController"> 
-    <h1>{{message}}</h1>
-    <div> {{error}}</div>
-
-    {{ countdown }}
-
-    <form name="searchUser" ng-submit="search(username)">
-      <input type="search" placeholder="Username to find" ng-model="username" required>
-      <input type="submit" value="Search">
-    </form>
-
-    <div ng-show="user" id="userDetails">
-      <h2>{{user.name}}</h2>
-      <img ng-src="{{user.avatar_url}}" width="200" title"{{user.name}}">
-      <p>Sort By:
-      <select ng-model="repoSortOrder">
-        <option value="+name">Name</option>
-        <option value="-stargazers_count">Stars</option>
-        <option value="+language">Language</option>
-      </select></p>
-    </div>
-
-    <table ng-hide="!user">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Stars</th>
-          <th>Language</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="repo in repos | orderBy: repoSortOrder">
-          <td>{{repo.name}}</td>
-          <td>{{repo.stargazers_count | number}}</td>
-          <td>{{repo.language}}</td>
-        </tr>
-      </tbody>
-    </table>
-
+  <body>
+      <h1>Github Viewer</h1>
+      <div ng-view></div>
   </body>
 
 </html>
